# 1brc

./: calculate_average_rust.sh  create_measurements_rust.sh
src/rust/: Cargo.toml  README.md
src/rust/src/: create_measurements.rs  main.rs
