[package]
name = "calculate_average"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "calculate_average"
path = "src/main.rs"

[[bin]]
name = "create_measurements"
path = "src/create_measurements.rs"

[dependencies]
rayon      = "1"
rustc-hash = "2"
memmap2    = "0.9"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
